Improve accessibility and display of activity feed
- Show all the activities when JS is disabled
- Show up to three activities on page load
- One list instead of two for displaying activities
- aria-live="polite" on activities list so changes
  get read out to screen reader users

--- a/app/assets/stylesheets/components/_activity.scss
+++ b/app/assets/stylesheets/components/_activity.scss
@@ -4,10 +4,16 @@
 }
 
 .activity-details {
-  flex-basis: 75%;
+  flex-basis: 73%;
 }
 
 .activity-badge {
-  flex-basis: 25%;
+  flex-basis: 27%;
   text-align: right;
+}
+
+.activity--hide {
+  .js & {
+    display: none;
+  }
 }
