--- a/app/views/activities/_assignment_activity.html.erb
+++ b/app/views/activities/_assignment_activity.html.erb
@@ -10,4 +10,4 @@
     <strong><%= assignment_activity.owner.name %></strong>
   <% end %>
 <% end %>
-<%= render 'activities/activity', activity: assignment_activity, details: details %>
+<%= render 'activities/activity', activity: assignment_activity, details: details, hide: hide %>
