--- a/app/views/activities/_create_activity.html.erb
+++ b/app/views/activities/_create_activity.html.erb
@@ -3,4 +3,4 @@
   <strong><%= create_activity.user_name %></strong>
   created this appointment
 <% end %>
-<%= render 'activities/activity', activity: create_activity, details: details %>
+<%= render 'activities/activity', activity: create_activity, details: details, hide: hide %>
