--- a/app/views/activities/_drop_activity.html.erb
+++ b/app/views/activities/_drop_activity.html.erb
@@ -3,4 +3,4 @@
   <strong>The system</strong>
   reported a delivery failure: <em><%= drop_activity.message %></em>
 <% end %>
-<%= render 'activities/activity', activity: drop_activity, details: details %>
+<%= render 'activities/activity', activity: drop_activity, details: details, hide: hide %>
