--- a/app/views/activities/_message_activity.html.erb
+++ b/app/views/activities/_message_activity.html.erb
@@ -3,4 +3,4 @@
   <strong><%= message_activity.user_name %></strong>
   said <em><%= message_activity.message %></em>
 <% end %>
-<%= render 'activities/activity', activity: message_activity, details: details %>
+<%= render 'activities/activity', activity: message_activity, details: details, hide: hide %>
