--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -70,7 +70,7 @@
 </div>
 <hr>
 
-<%= form_for @appointment, layout: :basic do |f| %>
+<%= form_for @appointment, layout: :basic, html: { data: { module: 'form-change-monitor' } } do |f| %>
   <%= render partial: 'personal_details_form', locals: { f: f, edit: true } %>
   <div class="row form-group">
     <div class="col-md-12">
