--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -40,7 +40,7 @@
           { "start": "13:30", "end": "14:40" },
           { "start": "14:50", "end": "16:00" }
         ]'>Early</button>
-        <button type="button" class="btn btn-default" data-events='[
+        <button type="button" class="btn btn-default t-mid" data-events='[
           { "start": "09:30", "end": "10:40" },
           { "start": "10:50", "end": "12:00" },
           { "start": "12:20", "end": "13:30" },
