--- a/app/views/activities/_activity_feed.html.erb
+++ b/app/views/activities/_activity_feed.html.erb
@@ -5,11 +5,11 @@
     <div class="activity-feed">
       <div class="well js-message-form">
         <%= form_for MessageActivity.new(appointment: appointment, owner: appointment.guider), url: activities_path(appointment_id: appointment.id), remote: true do |f| %>
-          <div class="input-group">
+          <div class="input-group activity-feed__input">
             <label for="message_activity_message"><span class="sr-only">Activity message</span></label>
             <%= f.text_field :message, placeholder: 'Add an action to keep others in the loop', class: 'form-control js-message t-message' %>
             <span class="input-group-btn">
-              <%= f.button class: 'btn btn-primary btn-block t-submit-message', data: { disable_with: 'Adding message...' } do %>
+              <%= f.button class: 'btn btn-primary btn-block t-submit-message activity-feed__button', data: { disable_with: 'Adding message...' } do %>
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 Add message
               <% end %>
