Correct availability when rescheduling
When rescheduling, the agent should only ever be able to reschedule to a
slot from the same provider as the original guider.

--- a/app/views/appointments/_schedule_form.html.erb
+++ b/app/views/appointments/_schedule_form.html.erb
@@ -33,10 +33,10 @@
       </div>
     </div>
     <div id="availability-calendar-on">
-      <%= render 'availability_calendar', form: form %>
+      <%= render 'availability_calendar', form: form, rescheduling: rescheduling %>
     </div>
   <% else %>
     <%= hidden_field_tag :scheduled, true %>
-    <%= render 'availability_calendar', form: form %>
+    <%= render 'availability_calendar', form: form, rescheduling: rescheduling %>
   <% end %>
 </div>
