--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -19,7 +19,7 @@
   <hr>
 
   <div class="row form-group">
-    <%= render 'schedule_form', form: f %>
+    <%= render 'schedule_form', form: f, rescheduling: false %>
   </div>
 
   <div class="row form-group">
