--- a/app/views/appointments/_availability_calendar.html.erb
+++ b/app/views/appointments/_availability_calendar.html.erb
@@ -6,15 +6,15 @@
 <%= render 'shared/nojs' %>
 
 <% if current_user.lloyds_signposter? %>
-  <%= form.check_box :lloyds_signposted, label: 'Lloyds Banking Group referral?', class: 't-lloyds-signposted js-lloyds-signposted', data: { module: 'lloyds-signposter' } %>
+  <%= form.check_box :lloyds_signposted, label: 'Lloyds Banking Group referral?', class: 't-lloyds-signposted js-lloyds-signposted', disabled: rescheduling, data: { module: 'lloyds-signposter' } %>
 <% end %>
 
 <div
   id="AppointmentAvailabilityCalendar"
   class="appointment-availability-calendar"
   data-module="appointment-availability-calendar"
-  data-available-slots-path="<%= available_bookable_slots_path %>"
-  data-lloyds-slots-path="<%= lloyds_bookable_slots_path %>"
+  data-available-slots-path="<%= available_bookable_slots_path(rescheduling: rescheduling, id: @appointment.id) %>"
+  data-lloyds-slots-path="<%= lloyds_bookable_slots_path(rescheduling: rescheduling, id: @appointment.id) %>"
   data-default-date="<%= BookableSlot.next_valid_start_date(current_user) %>"
 ></div>
 <%= form.hidden_field :start_at, class: 't-start-at js-selected-start' %>
