--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -167,7 +167,7 @@
           { class: 't-status', data: { module: 'secondary-status', options: Appointment::SECONDARY_STATUSES.to_json, 'initial-secondary-status' => @appointment.secondary_status } }
         )
       %>
-      <%= f.select(:secondary_status, [], {}, { class: 't-secondary-status js-secondary-status' }) %>
+    <%= f.select(:secondary_status, [], {}, { class: 't-secondary-status js-secondary-status', data: { 'no-tracking' => true }}) %>
     <% end %>
 
   </div>
