--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -175,10 +175,13 @@
 <table class="outer-container" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 100%;">
     <tr>
         <td style="padding: 0 0 0 15px;border-collapse: collapse;">
-            <table class="inner-container" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
+            <table class="inner-container" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt; width: 100%">
                 <tr>
-                    <td style="padding: 0;border-collapse: collapse;">
-                        <img src="https://www.pensionwise.gov.uk/email/pw.gif" width="183" height="100" alt="Pension Wise" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
+                    <td style="padding: 0;border-collapse: collapse; width: 50%;">
+                      <img src="<%= asset_url('/pw.jpg', skip_pipeline: true) %>" alt="Pension Wise" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
+                    </td>
+                    <td style="padding: 0;border-collapse: collapse; width: 50%;">
+                      <img src="<%= asset_url('/hmg.gif', skip_pipeline: true) %>" alt="HM Government" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
                     </td>
                 </tr>
             </table>
@@ -196,11 +199,12 @@
 
 <table class="outer-container" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 100%;">
     <tr>
-        <td style="padding: 0 0 0 15px;border-collapse: collapse;">
-            <table class="inner-container" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
+        <td style="padding: 0 0 0 15px;border-collapse: collapse; width: 100%;">
+            <table class="inner-container" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt; width: 100%;">
                 <tr>
-                    <td style="padding: 0;border-collapse: collapse;">
-                        <img src="https://www.pensionwise.gov.uk/email/hmg.gif" width="166" height="100" alt="HM Government" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
+                  <td style="width: 50%">&nbsp;</td>
+                  <td style="padding: 0;border-collapse: collapse; width: 50%;">
+                      <img src="<%= asset_url('/mh.jpg', skip_pipeline: true) %>" alt="MoneyHelper" style="outline: none;text-decoration: none;display: block;-ms-interpolation-mode: bicubic;">
                     </td>
                 </tr>
             </table>
