Simplify appointment duration copy
Remove the ambiguity around appointment durations.

--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -79,7 +79,7 @@
             </tr>
             <tr>
               <td class="active"><b>Appointment date</b></td>
-              <td><%= "#{@appointment.start_at.to_date.to_s(:govuk_date)} #{@appointment.start_at.to_time.to_s(:govuk_time)}" %><br>(will last around 45 to 60 minutes)</td>
+              <td><%= "#{@appointment.start_at.to_date.to_s(:govuk_date)} #{@appointment.start_at.to_time.to_s(:govuk_time)}" %><br>(will last around 60 minutes)</td>
             </tr>
           </tbody>
         </table>
