--- a/app/views/shared/email/_appointment_details.text.erb
+++ b/app/views/shared/email/_appointment_details.text.erb
@@ -5,7 +5,7 @@ Time:
 <%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
 
 Appointment lasts:
-45 to 60 minutes
+Around 60 minutes
 
 <% unless @appointment.bsl_video? %>
 Your phone number:
