Add appointment type labelling

--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -76,6 +76,7 @@
               <li>
                 <p>Reference: <%= @duplicate.id %></p>
                 <p>Appointment date/time: <%= @duplicate.start %></p>
+                <p>Type: <%= @duplicate.schedule_type %></p>
               </li>
             <% end %>
             </ul>
