--- a/app/views/activities/_casebook_processed_activity.html.erb
+++ b/app/views/activities/_casebook_processed_activity.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:activity_message, flush: true) do %>
   <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-  The appointment was successfully published to casebook
+  The appointment was successfully published to casebook <% if casebook_processed_activity.message? %><strong><%= casebook_processed_activity.message %></strong><% end %>
 <% end %>
 <%= render 'activities/activity', activity: casebook_processed_activity, details: details, hide: hide %>
