Add change log page
Adds a date ordered list of released changes with plain text summaries.
This is very basic for now and entries will be made from the console.

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -41,6 +41,10 @@
   </li>
 <% end %>
 
+<li>
+  <%= active_link_to 'Changes', releases_path %>
+</li>
+
 <li class="dropdown quick-search" data-module="quick-search">
   <a href="#" class="dropdown-toggle js-quick-search-button" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
     <span class="sr-only">Quick Search</span>
